test-suite/output/ErrorLocation_12774_1.v
Goal Type.
simpl; exact 0.
Abort.
